# SimplexEngine

./: .gitignore  CMakeLists.txt  README.md  SimplexEngine.sln
SimplexEngine/: Community.h  Entity.cpp  Entity.h  GameObject.cpp  Main.cpp  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  SimplexEngine.cpp  SimplexEngine.h  SimplexEngine.vcxproj  SimplexEngine.vcxproj.filters
include/: Common.h  GameObject.h  Renderer.h  Shader.h  SimplexEngine.h
src/: Entity.cpp  Main.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  SimplexEngine.cpp  fragShader.glsl  vertShader.glsl
